--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <input type="checkbox" name="tech" value="CSS" checked /> CSS
     <input type="checkbox" name="tech" value="JavaScript" checked /> JavaScript
     <input type="checkbox" name="tech" value="Node.js" checked /> Node.js
+    <input type="checkbox" name="tech" value="Express.js" checked /> Express.js
     <input type="checkbox" name="tech" value="MongoDB" checked /> MongoDB<br><br>
 
     <label>Summary (Max 300 characters):</label><br>
